--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@
     width: 40px;
     height: 40px;
     background-color: rgb(93, 168, 125);
-    background-image: url("/img/grass.PNG");
+    background-image: url("./img/grass.PNG");
     background-size: cover;
 }
 .arbre{
     background-color: blue;
-    background-image: url("/img/wood.png");
+    background-image: url("./img/wood.png");
     background-size: cover;
 }
 .sortieOuest{
